@@ -10,6 +10,10 @@ devscripts (2.10.19) UNRELEASED; urgency=low
       skipped (Closes: #469023)
     + Clarify in the manpage that some issues detected by the script may
       be XSIisms etc rather than strictly bash-specific features
+    + Add checks for suspend, caller, complete/compgen, declare/typeset,
+      disown, builtin, set -[BHT], alias -p, unalias -a, local with
+      options or an assigned value and $BASH(_*). Thanks to Raphael
+      Geissert for the patch (Closes: #469050)
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 01 Mar 2008 11:42:02 +0000
 
